Fix scrolling on mobile

--- a/website/assets/sass/cli.sass
+++ b/website/assets/sass/cli.sass
@@ -4,6 +4,8 @@
 .cli
   +border
   padding: 1.5rem
+  margin: 2rem 0
+  overflow: scroll
 
   &-title
     font-size: 1.2rem
@@ -34,6 +36,7 @@
   &-flags
     +border
     padding: 1rem
+    overflow: scroll     
 
     .flag
       font-family: $family-code
